sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: illegal start of simple pattern
		for(var i <- 0 to length-2){
                    ^AlgBubbleSort1:13: error: '<-' expected but '}' found.
	}
        ^