sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var swaped = true;
	var length = getNombreValeurs();
	while(swaped){
		swaped = false;
		for(var i <- 0 to length-2){
			if(plusPetit(i, i+1)){
				swaped = true;
				echange(i, i+1);
			}
		}
	}
}
